--- a/Responsive Web Design/Cafe Menu/styles.css
+++ b/Responsive Web Design/Cafe Menu/styles.css
@@ -4,21 +4,27 @@ h1, h2, p {
 body {
     background-color: burlywood;
     background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
+    font-family: sans-serif;
 }
 .menu {
     width: 80%;
     background-color: burlywood;
     margin-left: auto;
     margin-right: auto;
+    padding: 20px;
+    max-width: 500px;
+}
+h1, h2 {
+    font-family: Impact, serif;
 }
 .item p {
     display: inline-block;
 }
-.flavor {
+.flavor, .dessert {
     text-align: left;
-    width: 49%;
+    width: 75%;
 }
 .price {
     text-align: right;
-    width: 49%;
+    width: 25%;
 }
