--- a/Responsive Web Design/Cafe Menu/styles.css
+++ b/Responsive Web Design/Cafe Menu/styles.css
@@ -5,6 +5,7 @@ body {
     background-color: burlywood;
     background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
     font-family: sans-serif;
+    padding: 20px;
 }
 .menu {
     width: 80%;
@@ -19,6 +20,9 @@ h1, h2 {
 }
 .item p {
     display: inline-block;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-size: 18px;
 }
 .flavor, .dessert {
     text-align: left;
@@ -36,4 +40,28 @@ h1 {
 }
 h2 {
     font-size: 30px;
+}
+hr {
+    height: 2px;
+    background-color: brown;
+    border-color: brown;
+}
+.bottom-line {
+    margin-top: 25px;
+}
+/* FOOTER */
+footer {
+    font-size: 14px;
+}
+a {
+    color: black;
+}
+a:visited {
+    color: gray;
+}
+a:hover {
+    color: brown;
+}
+a:active {
+    color: white;
 }
