--- a/Responsive Web Design/Cafe Menu/styles.css
+++ b/Responsive Web Design/Cafe Menu/styles.css
@@ -37,6 +37,8 @@ h1, h2 {
 }
 h1 {
     font-size: 40px;
+    margin-top: 0;
+    margin-bottom: 15px;
 }
 h2 {
     font-size: 30px;
@@ -57,11 +59,11 @@ a {
     color: black;
 }
 a:visited {
-    color: gray;
+    color: black;
 }
 a:hover {
     color: brown;
 }
 a:active {
-    color: white;
+    color: brown;
 }
